--- a/react-pos/public/index.html
+++ b/react-pos/public/index.html
@@ -38,4 +38,13 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer style="padding-top: 2cm;">
+    <div style="height:5cm; background-color: rgb(175, 226, 209);bottom: 0;">
+      <img src="./WhatsApp Image 2020-12-12 at 11.18.09.jpeg" style="width:6cm;height:4cm;padding-top: 0.5cm;padding-left: 0.5cm;float:left;padding-right: 0.5cm;" > 
+      <div style="width:20cm;float:right">
+        <h1 style="font-family: 'Courier New', monospace;">Product Of Aura Of Int</h1>
+        <h4 style="font-family: 'Courier New', monospace;"><b>TelNo :- 09876543221</b></h4>
+      </div>
+    </div>
+</footer>
 </html>
