--- a/react-pos/public/index.html
+++ b/react-pos/public/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://npmcdn.com/bootstrap/dist/bootstrap.min.css"></link>
+    <link rel="stylesheet" href="./../src/index.css"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
